* Bug #35145: Bug #35267: Start UCS 4.0 development
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51875 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.0-1) unstable; urgency=low
+
+  * Bug #35145: Bug #35267: Start UCS 4.0 development
+
+ -- Florian Best <best@univention.de>  Wed, 16 Jul 2014 14:18:41 +0200
+
 univention-system-setup (7.0.69-11) unstable; urgency=medium
 
   * Bug #34484: [WIP] Integration of new appliance wizard
