--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-52) unstable; urgency=low
+
+  * Update deleted cache while removing object in S4 (Bug #32263)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Jul 2014 16:32:07 +0200
+
 univention-s4-connector (8.0.33-51) unstable; urgency=low
 
   * Fixed python syntax error from last commit (Bug #32194)
