--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-53) unstable; urgency=low
+
+  * Add the newly created S4 object to the s4 cache (Bug #33621)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Jul 2014 16:49:44 +0200
+
 univention-s4-connector (8.0.33-52) unstable; urgency=low
 
   * Update deleted cache while removing object in S4 (Bug #32263)
