* scripts/remove_ucs_rejected.py: support multiple rejects for one DN   (Bug #32194)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51886 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-54) unstable; urgency=low
+
+  * scripts/remove_ucs_rejected.py: support multiple rejects for one DN
+    (Bug #32194)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 16 Jul 2014 20:52:23 +0200
+
 univention-s4-connector (8.0.33-53) unstable; urgency=low
 
   * Add the newly created S4 object to the s4 cache (Bug #33621)
