* Bug #34484: [WIP] added missing build dependency
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51888 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-14) unstable; urgency=medium
+
+  * Bug #34484: [WIP] added missing build dependency
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 16 Jul 2014 22:23:35 +0200
+
 univention-system-setup (7.0.69-13) unstable; urgency=medium
 
   Bug #34484 [WIP]
