Bug #34484 [WIP] * email validation + auto account description * added missing dependencies
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51889 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (7.0.69-15) unstable; urgency=medium
+
+  Bug #34484 [WIP]
+  * email validation + auto account description
+  * added missing dependencies
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 16 Jul 2014 22:43:25 +0200
+
 univention-system-setup (7.0.69-14) unstable; urgency=medium
 
   * Bug #34484: [WIP] added missing build dependency
