--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-16) unstable; urgency=medium
+
+  * Bug #34484: [WIP] make sure that test cases can be run during build
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 16 Jul 2014 23:17:14 +0200
+
 univention-system-setup (7.0.69-15) unstable; urgency=medium
 
   Bug #34484 [WIP]
