--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-55) unstable; urgency=low
+
+  * Revert: Add the newly created S4 object to the s4 cache (Bug #33621
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 17 Jul 2014 08:36:27 +0200
+
 univention-s4-connector (8.0.33-54) unstable; urgency=low
 
   * scripts/remove_ucs_rejected.py: support multiple rejects for one DN
