--- a/test/winexe/debian/changelog
+++ b/test/winexe/debian/changelog
@@ -1,3 +1,9 @@
+winexe (1.1.0-3) unstable; urgency=low
+
+  * added libdcerpc-dev to build dependencies (Bug #34572) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 17 Jul 2014 09:54:44 +0200
+
 winexe (1.1.0-2) unstable; urgency=low
 
   * added python to build dependencies (Bug #34572) 
