--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-17) unstable; urgency=medium
+
+  * Bug #34484: [WIP] fixed jshint warnings, auto values for ssl UCR variables
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 17 Jul 2014 10:08:47 +0200
+
 univention-system-setup (7.0.69-16) unstable; urgency=medium
 
   * Bug #34484: [WIP] make sure that test cases can be run during build
