--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (7.0.69-18) unstable; urgency=medium
+
+  Bug #34484 [WIP]
+  * outsource LiveSearch in separate file
+  * adjust widget names
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 17 Jul 2014 10:40:46 +0200
+
 univention-system-setup (7.0.69-17) unstable; urgency=medium
 
   * Bug #34484: [WIP] fixed jshint warnings, auto values for ssl UCR variables
