--- a/test/winexe/debian/changelog
+++ b/test/winexe/debian/changelog
@@ -1,3 +1,9 @@
+winexe (1.1.0-7) unstable; urgency=low
+
+  * added mingw-w64 to build dependencies (Bug #34572) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 17 Jul 2014 10:42:03 +0200
+
 winexe (1.1.0-6) unstable; urgency=low
 
   * added mingw32-runtime, libc6-dev to build dependencies (Bug #34572) 
