* Bug #34484: [WIP] fixed jshint warnings, auto values for ssl UCR variables
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51905 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (8.0.2-0) unstable; urgency=low
+
+  * Bug #34484: [WIP] fixed jshint warnings, auto values for ssl UCR variables
+
+ -- Florian Best <best@univention.de>  Thu, 17 Jul 2014 10:41:13 +0200
+
 univention-system-setup (8.0.1-0) unstable; urgency=low
 
   * merge svn 51886:51890
