* Bug #35145: Bug #35267: remove dependency and build-dependency on univention-installer-modules as the package is obsolete
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51907 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (8.0.2-1) unstable; urgency=low
+
+  * Bug #35145: Bug #35267: remove dependency and build-dependency on
+  	univention-installer-modules as the package is obsolete
+
+ -- Florian Best <best@univention.de>  Thu, 17 Jul 2014 10:42:48 +0200
+
 univention-system-setup (8.0.2-0) unstable; urgency=low
 
   * Bug #34484: [WIP] fixed jshint warnings, auto values for ssl UCR variables
