--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,11 @@
+univention-system-setup (8.0.3-1) unstable; urgency=low
+
+  Bug #34484 [WIP]
+  * outsource LiveSearch in separate file
+  * adjust widget names
+
+ -- Florian Best <best@univention.de>  Thu, 17 Jul 2014 10:48:35 +0200
+
 univention-system-setup (8.0.2-1) unstable; urgency=low
 
   * Bug #35145: Bug #35267: remove dependency and build-dependency on
