--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-2) unstable; urgency=low
+
+  * Bug #35384,35385,35372,35375 d-i: disable modules
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 17 Jul 2014 14:36:52 +0200
+
 univention-dvd (0.2.0-1) unstable; urgency=low
 
   * Bug #30547: added linux kernel to task file
