* Bug #35145: remove obsolete things
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51931 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (7.0.0-4) unstable; urgency=low
+
+  * Bug #35145: remove obsolete things
+
+ -- Florian Best <best@univention.de>  Thu, 17 Jul 2014 16:05:49 +0200
+
 univention-management-console (7.0.0-3) unstable; urgency=low
 
   * Bug #35145: remove obsolete things
