* Move fix_gpo_container_names code to check_gpo_presence (Bug #34776)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51933 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-27) unstable; urgency=medium
+
+  * Move fix_gpo_container_names code to check_gpo_presence (Bug #34776)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Jul 2014 16:16:04 +0200
+
 univention-management-console-module-adtakeover (1.0.10-26) unstable; urgency=medium
 
   * Move fix_gpo_container_names code to fix_sysvol_acls (Bug #34776)
