* Abort joinscript if domaincontroller_master claims service "AD Member"   (Bug #35252)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51939 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-28) unstable; urgency=medium
+
+  * Abort joinscript if domaincontroller_master claims service "AD Member"
+    (Bug #35252)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Jul 2014 18:44:37 +0200
+
 univention-samba4 (3.0.39-27) unstable; urgency=low
 
   * added samba4/backup/cron/options (Bug #35085) 
