univention-directory-manager-modules (9.0.76-16) unstable; urgency=low
  * limit possible characters in dns/alias (Bug #35254)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51940 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.76-16) unstable; urgency=low
+
+  * limit possible characters in dns/alias (Bug #35254)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Thu, 17 Jul 2014 18:51:30 +0200
+
 univention-directory-manager-modules (9.0.76-15) unstable; urgency=low
 
   * proof_uniqueMembers: simplified last change (Bug #33030)
