--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-ad-connector (8.0.17-15) unstable; urgency=low
+
+  * Fixed python traceback in AD member mode (Bug #35091)
+  * Install univention-samba-ad-member instead of univention-samba
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 18 Jul 2014 07:36:28 +0200
+
 univention-ad-connector (8.0.17-14) unstable; urgency=low
 
   * Check SSL/TLS settings (Bug #35091)
