Update to the latest kernel build (Bug #35226)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51943 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/kernel/univention-kernel-image/debian/changelog
+++ b/kernel/univention-kernel-image/debian/changelog
@@ -1,3 +1,9 @@
+univention-kernel-image (7.0.0-14) unstable; urgency=low
+
+  * Update to the latest kernel build (Bug #35226).
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Fri, 18 Jul 2014 07:57:22 +0200
+
 univention-kernel-image (7.0.0-13) unstable; urgency=low
 
   * Update to the latest kernel build (Bug #34571).
