* Bug #35145: use closure as JavaScript build optimizer
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51944 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (4.0.0-5) unstable; urgency=low
+
+  * Bug #35145: use closure as JavaScript build optimizer
+
+ -- Florian Best <best@univention.de>  Fri, 18 Jul 2014 07:59:31 +0200
+
 univention-management-console-frontend (4.0.0-4) unstable; urgency=low
 
   * Bug #35145: adapt path to nodejs
