--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,21 @@
+univention-management-console-frontend (4.0.1-1) unstable; urgency=low
+
+  Bug #34484:
+  * Adjust CSS rules to integrate dijit/form/Select
+  * Use Dojo async attribute
+  * If UMC overview is disabled and a startup module is specified, only load
+    AMD modules of the startup UMC module
+  * Allow dynamic reloading of translations
+  * Added radio button widget
+  * Added tools.defer()
+  * Fixed validation of Form
+  * Fixed vertical scrolling issues with the Grid in Firefox
+  * Allow configuration of LabelPanes via the widget property 'labelConf'
+  * TextBox: allow dynamic changing of 'inlineLabel'
+  * Wizard: added convenience method isPageVisible()
+
+ -- Florian Best <best@univention.de>  Fri, 18 Jul 2014 10:38:57 +0200
+
 univention-management-console-frontend (4.0.0-5) unstable; urgency=low
 
   * Bug #35145: use closure as JavaScript build optimizer
