Bug #35384,35385,35372,35375 d-i: Fix path
Fix wrong directory task -> data
Add lilo to exclude list.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51966 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-dvd/debian/changelog
+++ b/base/univention-dvd/debian/changelog
@@ -1,3 +1,9 @@
+univention-dvd (0.2.0-3) unstable; urgency=low
+
+  * Bug #35384,35385,35372,35375: Fix path
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 18 Jul 2014 14:50:12 +0200
+
 univention-dvd (0.2.0-2) unstable; urgency=low
 
   * Bug #35384,35385,35372,35375 d-i: disable modules
